Changed pyfacebook from svn repo to git repo in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ django
 oauth
 python-openid
 
--e svn+http://pyfacebook.googlecode.com/svn/trunk/#egg=pyfacebook
+-e git+git://github.com/sciyoshi/pyfacebook.git#egg=pyfacebook
